Fix images align (#167)

--- a/css/styled-content.less
+++ b/css/styled-content.less
@@ -591,7 +591,7 @@
     margin-bottom: 20px;
 
     .image-wrapper {
-        margin: 0;
+        margin: 15px auto;
         overflow: visible;
     }
 }
